--- a/css/thirdpage.css
+++ b/css/thirdpage.css
@@ -1,4 +1,4 @@
-body {background-color:lightskyblue}
+body {background-color:lightskyblue;}
 .toptoolbar {
     background-color:gold;
     overflow: hidden;
