--- a/css/secondpage.css
+++ b/css/secondpage.css
@@ -6,7 +6,7 @@ body {background-color:lightskyblue}
   
   .toptoolbar a {
     float: left;
-    color: red;
+    color:blue;
     text-align: center;
     padding: 12px 14px;
     font-size: 35px;
@@ -14,10 +14,10 @@ body {background-color:lightskyblue}
   
    .toptoolbar a:hover {
     background-color: #ddd;
-    color: red;
+    color:blue;
   }
   
   .toptoolbar a.active {
     background-color:white;
-    color:red;
+    color: blue;
   } 
