Changed background colors to red and plum

--- a/css/thirdpage.css
+++ b/css/thirdpage.css
@@ -1,6 +1,6 @@
-body {background-color:lightskyblue;}
+body {background-color:red;}
 .toptoolbar {
-    background-color:gold;
+    background-color:plum;
     overflow: hidden;
   }
   
