--- a/css/secondpage.css
+++ b/css/secondpage.css
@@ -1,12 +1,12 @@
-body {background-color:red}
+body {background-color:lightblue}
 .toptoolbar {
-    background-color:plum;
+    background-color:lightgoldenrodyellow;
     overflow: hidden;
   }
   
   .toptoolbar a {
     float: left;
-    color:blue;
+    color:black;
     text-align: center;
     padding: 12px 14px;
     font-size: 35px;
@@ -14,10 +14,10 @@ body {background-color:red}
   
    .toptoolbar a:hover {
     background-color: #ddd;
-    color:blue;
+    color:black;
   }
   
   .toptoolbar a.active {
     background-color:white;
-    color: blue;
+    color:black;
   } 
