--- a/css/thirdpage.css
+++ b/css/thirdpage.css
@@ -1,6 +1,6 @@
-body {background-color:red;}
+body {background-color:lightblue;}
 .toptoolbar {
-    background-color:plum;
+    background-color:lightgoldenrodyellow;
     overflow: hidden;
   }
   
